# Origami

./: README.md
src/StringTokenizer/: CMakeLists.txt  StringTokenizer.cpp  StringTokenizer.h  strtoktest.cpp
src/common/: adj_list.h  count_support.h  db_reader.h  element_parser.h  generic_classes.h  hash_utils.hpp  helper_funs.h  mem_storage_manager.h  pat_fam.h  pat_fam.h.bak  pat_support.h  pattern.h  properties.h  time_tracker.h  tokenizer_utils.h  typedefs.h
src/graph/: compare_result.cpp  graph_can_code.h  graph_evat.h  graph_iso_check.h  graph_operators.h  graph_reader.h  graph_tokenizer.h  graph_tokenizer.h.bak  graph_vat.h  graph_vat.h.old  level_one_hmap.h  max_subgraph.h  random_max-graph.h
test/: CMakeLists.txt  gen_min_dfs_from_dmtl.cpp  graph_test.cpp
